force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/QTB_Template_Footer_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>#ALM-483 Footer Details for Quote Templates</description>
    <label>QTB Template Footer Mapping</label>
    <pluralLabel>QTB Template Footer Mappings</pluralLabel>
</CustomObject>