force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Document_Language__c.field-meta.xml
<CustomField>
    <fullName>QTB_Document_Language__c</fullName>
    <label>Document Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>