force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Opportunity_Country__c</fullName>
    <label>Opportunity Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>