force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Paper_Recycling_Website__c.field-meta.xml
<CustomField>
    <fullName>QTB_Paper_Recycling_Website__c</fullName>
    <description>#ALM-715 Paper Recycling Websites based on country</description>
    <label>QTB Paper Recycling Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>