force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Phone__c.field-meta.xml
<CustomField>
    <fullName>QTB_Phone__c</fullName>
    <label>Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>