force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Primary_Website__c.field-meta.xml
<CustomField>
    <fullName>QTB_Primary_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Website</label>
    <type>Checkbox</type>
</CustomField>