force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Support_Website__c.field-meta.xml
<CustomField>
    <fullName>QTB_Support_Website__c</fullName>
    <description>#ALM-715 Support websites based on country</description>
    <label>QTB Support Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>