force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/fields/QTB_Website__c.field-meta.xml
<CustomField>
    <fullName>QTB_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>