force-app/main/default/objects/QTB_Template_Footer_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>QTB_Document_Language__c</columns>
    <columns>QTB_Opportunity_Country__c</columns>
    <columns>QTB_Phone__c</columns>
    <columns>QTB_Primary_Website__c</columns>
    <columns>QTB_Website__c</columns>
    <columns>QTB_Paper_Recycling_Website__c</columns>
    <columns>QTB_Support_Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>